# Polyduck-Web

./: .gitignore  CMakeLists.txt
include/graphics/: Camera.h  Primitives.h  Shader.h  UiManager.h
shaders/: shader.fs  shader.vs  shadow.fs  shadow.vs  skybox.fs  skybox.vs  unshaded.fs  unshaded.vs
src/: glad.c  main.cpp
src/graphics/: Material.cpp  TextureLoader.cpp  UiManager.cpp
